PROJECT(MLINTERP)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)

SET(CMAKE_SKIP_INSTALL_ALL_DEPENDENCY true)
INSTALL(FILES "${PROJECT_SOURCE_DIR}/mlinterp/mlinterp" "${PROJECT_SOURCE_DIR}/mlinterp/mlinterp.hpp" DESTINATION include)

SET(CMAKE_CXX_STANDARD 11)

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}")

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/mlinterp")

SET(CMAKE_BUILD_TYPE Release)

SET(PROJECT_BINARY_DIR "${PROJECT_SOURCE_DIR}/bin")
SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}")

OPTION(PACKAGE_TESTS "Build tests")
if(PACKAGE_TESTS)
  ENABLE_TESTING()
  INCLUDE(GoogleTest)
  ADD_SUBDIRECTORY(tests)
endif()
